--- a/src/app/ui/globals.css
+++ b/src/app/ui/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #f7db9d;
   --foreground: #171717;
 }
 
@@ -19,8 +19,17 @@
   }
 }
 
+@layer utilities {
+  .text-stroke-white {
+    -webkit-text-stroke: 1px white;
+  }
+
+  .text-stroke-black {
+    -webkit-text-stroke: 0.5px black;
+  }
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
